Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-133744

QString assertion failure using UTF-16 character in QJsonObject key

XMLWordPrintable

    • Windows
    • 54daec43a (dev), 8e94b67ba (6.9), d4a90a3f3 (6.8), c07c2d5a5 (6.8.3)

      In debug mode, I get an assertion failure when inserting valid data into a QJsonObject object.

      The message error is
      ASSERT: "lhs.size() == rhs.size()" in file C:\Users\qt\work\qt\qtbase\src\corelib\text\qstring.cpp. line 1395

      This is reproducible with these 3 lines of code and only if UTF-16 character is used for the JSON object key and if the second key is prior to the first one in alphabetical order.

      QJsonObject myObject;
      myObject.insert("k♭", "First key"); // key should contain UTF-16 character
      myObject.insert("a", "Second key");  // second key should be prior to first key in alphabetical order
      

      I checked the code and usually the size of lhs and rhs is checked before calling the function QtPrivate::equalStrings(QStringView lhs, QStringView rhs) (for example in comparesEqual function in file qstring.h at line 799)

      But this is not the case in function stringCompareElement(const QtCbor::Element &e, String s, QtCbor::Comparison mode) in file qcborvalue_p.h:365.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            thiago Thiago Macieira
            spedrazzi Stefania Pedrazzi
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: